--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -1,5 +1,18 @@
 \chapter{Introduction}
 
+\section{Conventions}
+
+\> typographical conventions
+
+\tab[\strut\qquad #\hfil&\qquad #\hfil&\qquad #\hfil\qquad\cr]{typo conventions}{Typographical conventions.}{\ln
+struture			& example				& font/symbol\cr\ln
+scalar				& $s$ 					& italics\cr
+vector				& $\vec v$				& bold\cr
+element of vector	& $v_i$					& italics\cr
+dot product			& $\vec v\cdot \vec w$	& middle dot\cr
+matrix				& $\mat M$				& slanted\cr\ln
+}
+
 \> General introduction
 \> {\bf motivation} for what I study.
 
